queshen/mobile-queshen/css/styleQueshen.css
/* ... */
.queshenJiangLi .jiangli_02{position: relative;height: 4.54rem; width: 100%; background: url(../images/queshen/jiangli_02.png) center/contain no-repeat;}
.queshenJiangLi .jiangli_03{height: .99rem; width: 100%; background: url(../images/queshen/jiangli_03.png) center/contain no-repeat;}

.queshenJiangLi .jiangli_box{overflow: hidden; color: #8E4916;width: 6.71rem; height: 4.02rem; line-height: .36rem;margin-left: 1.71rem; padding-top:.7rem;}
.queshenJiangLi .jiangli_box .jiangli_title{color: #410B02;}
.jiangli_title img{width: 5.99rem; height: .28rem; vertical-align: middle; margin-left: -0.2rem;}
.jiangli_title li{text-align: center;padding: 0.11rem 0; line-height: 0;}

.jiangli_box ul li{border-bottom: 2px solid; -o-border-image:url(../images/queshen/border_bg.png) 680 2 stretch; border-image:url(../images/queshen/border_bg.png) 680 2 stretch;}
.jiangli_box ul li span{display: inline-block; text-align: center; height: .7rem; line-height: .7rem; vertical-align: middle; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;}
.jiangli_box ul li span:nth-child(1){width:.6rem;padding-left: .2rem; }/*1rem;*/
.jiangli_box ul li span:nth-child(2){width:1.2rem; } /*1.3rem;*/
.jiangli_box ul li span:nth-child(3){width:1.2rem;}/*1.5rem;*/
.jiangli_box ul li span:nth-child(4){width:2.2rem; white-space: normal; height: auto;}/*1.3rem;*/
.jiangli_box li span:nth-child(4) i{width: 50%; display: inline-block; line-height: .22rem; height: .22rem; font-size: .18rem;white-space: nowrap; overflow: hidden;}
.jiangli_box ul li span:nth-child(5){width:1.05rem; margin-left: .05rem;}/*1.25rem;*/

.jiangli_body{height:3.25rem; overflow-y: auto; overflow-x:hidden; font-size: .2rem;}
.jiangli_body span:nth-child(4){color:#EA3E09;}
.jiangli_body span:nth-child(5).btn_get{width: 1.05rem; background:url(../images/queshen/btn_get.png) center/contain no-repeat;}

.red{color: #EA3E09;}
.diaBox h3:nth-child(1){margin-top: 1.11rem;}
.diaBox h3{width: 6.34rem; margin-left: .16rem;font-size: .34rem; line-height: .34rem; text-align: center; line-height: .5rem; padding: 0.12rem 0;}
.diaBox{ font-size: .2rem; width: 6.91rem; height: 4.89rem; position: absolute; right: 1.32rem; top: .5rem; z-index: 100; background: url(../images/queshen/dia_bg.png) center/contain no-repeat; }
.diaBox .dia_header{position: relative;height: .47rem; padding: 0.05rem 0; text-align: center; margin-top: .07rem;}
.diaBox .dia_header img{width:1.17rem; height: .47rem;vertical-align: middle; margin-left: -0.2rem; }
.diaBox .dia_header .dia_close{position: absolute; width: .49rem; height: .49rem; bottom: -0.26rem; right: 0.14rem; border-radius: 50%; }
.diaCard{display: none; color: #B47355;}
.diaHongbao{display: none; color:#B47355;}
.diaWeixin{display: none;color: #B47355;}
.diaHongbao h3:nth-child(1){margin-top: .7rem;}
.diaHongbao h3:nth-child(2){margin-bottom: .4rem;}
.diaHongbao p{width:4.93rem; font-size: .24rem; border-top:2px dashed #F2D9B9; padding-top: .37rem; margin-left: .88rem; padding-left:.1rem; padding-right:.05rem;}

.diaPersonInfo{display: none;}
.diaPersonInfo h3:nth-child(1){margin-top: 0; margin-top: .3rem;}
.diaPersonInfo h3{font-size: .28rem; line-height: .42rem; padding: 0;}
.diaPersonInfo .text_box{width: 4.95rem; border-top: 2px dashed #F1D8B9; margin-left: .85rem; text-align: center; margin-top: .25rem; padding-top: .2rem;}
.diaPersonInfo .text_box p{line-height: .5rem; margin-bottom: .23rem;}
.diaPersonInfo .text_box p span{display: inline-block; width: .9rem; white-space: nowrap; overflow: hidden; font-size: .28rem; color: #B37255; text-align: right; margin-right: .16rem; font-weight: bold;}
.diaPersonInfo .text_box p input{height: .5rem; width: 3rem; border-radius: .3rem; border: 1px solid #EDE0CD; vertical-align: top; background: #FDFAF1; font-size: .24rem; padding:0 0.2rem;outline: 0;}
.diaPersonInfo .text_box p input:focus{outline: 0;}
.diaPersonInfo .text_box .btn_lingqu{display: inline-block; width: 1.95rem; height: .76rem; margin-left: .15rem; background: url(../images/queshen/icon_lingqu.png) center/contain no-repeat;}

.diaSuccess{display: none;}
.diaSuccess h3:nth-child(1){margin-top: .7rem;}
.diaSuccess h4:nth-child(2){margin-top: .18rem;}
.diaSuccess h4{width: 6.34rem; margin-left: .16rem;font-size: .28rem; line-height: .4rem; text-align: center; color: #B37255;}
.diaSuccess p{width: 4.95rem; border-top: 2px dashed #F1D8B9; margin-left: .85rem; text-align: center; margin-top: .32rem; padding-top: .3rem; color:#B37255; font-size: .24rem; }

/* 雀神排行 */
.queshenPaiHang .paihang_01{height: 1.55rem; width: 100%; background: url(../images/queshen/paihang_04.png) center/cover no-repeat;}
.queshenPaiHang .paihang_02{position: relative;height: 3.22rem; width: 100%; background: url(../images/queshen/paihang_05.png) center/cover no-repeat;}
.queshenPaiHang .paihang_03{height: 1.63rem; width: 100%; background: url(../images/queshen/paihang_06.png) center/cover no-repeat;}

.paihang_02 .select_box{position:absolute;top: 0; right:1.71rem; border:.02rem solid #8E4916;border-right: .28rem solid #8E4916; width:.9rem;height: .26rem; background: #EBDABA; }
.paihang_02 .date{border:0;position:absolute;top: -0.02rem; background: transparent; width: 2.4rem; height: 200%; font-size:.4rem; color:#8E4916; -webkit-transform:scale(0.5); transform:scale(0.5); -webkit-transform-origin: 0 0; transform-origin: 0 0;}
.paihang_02 .select_box .icon_arrow{display:block;pointer-events: none; position:absolute; right:-0.22rem; top:.10rem; border-left:.08rem solid transparent; border-right:.08rem solid transparent;border-top:.08rem solid #EBDABA; }
.paihang_02 .date:focus{outline:0;}
.paihang_02 .date option{font-size: .2rem;}

.paihang_box ul li{border-bottom: 2px solid; border-top: 0; -o-border-image:url(../images/queshen/border_bg.png) 2;-webkit-border-image:url(../images/queshen/border_bg.png) 2; border-image:url(../images/queshen/border_bg.png) 2;}
/* ... */

